# wrf_simulation

./: .gitignore  README.md  pyproject.toml  wrf_postprocessing.ipynb
results/: wrfout_d02_selcomb022.nc
wrf_input_files/: namelist.input  namelist.wps
