[project]
name = "wrf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "notebook>=7.5.5",
    "numpy>=2.4.4",
    "salem>=0.3.11",
    "shapely>=2.1.2",
]
